--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+<!--suppress ALL -->
 <mapper namespace="com.pamirs.takin.entity.dao.report.TReportMapper">
     <resultMap id="BaseResultMap" type="com.pamirs.takin.entity.domain.entity.report.Report">
         <!--@mbg.generated-->
@@ -84,12 +85,6 @@
             </if>
             <if test="param.endTime != null">
                 and start_time  <![CDATA[ <= ]]> #{param.endTime}
-            </if>
-            <if test="param.userIds != null and param.userIds.size() != 0">
-                and user_id in
-                <foreach collection="param.userIds" open="(" close=")" separator="," item="userId">
-                    #{userId}
-                </foreach>
             </if>
             <if test="param.type != null">
                 and `type` = #{param.type}
