report表新增节点树结构字段，修改报告节点树获取接口

--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
@@ -144,6 +144,9 @@
             <if test="scriptId != null">
                 script_id,
             </if>
+            <if test="scriptAnalysisResult != null">
+            script_analysis_result,
+            </if>
         </trim>
         <trim prefix="values (" suffix=")" suffixOverrides=",">
             <if test="id != null">
@@ -226,6 +229,9 @@
             </if>
             <if test="scriptId != null">
                 #{scriptId,jdbcType=DECIMAL},
+            </if>
+            <if test="scriptAnalysisResult != null">
+             #{scriptAnalysisResult,jdbcType=VARCHAR},
             </if>
         </trim>
     </insert>
