--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
@@ -230,7 +230,7 @@
             <if test="scriptId != null">
                 #{scriptId,jdbcType=DECIMAL},
             </if>
-            <if test="scriptAnalysisResult != null">
+            <if test="scriptNodeTree != null">
              #{scriptNodeTree,jdbcType=VARCHAR},
             </if>
         </trim>
