Fix:根据执行人搜索压测报告

--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
@@ -96,7 +96,7 @@
             </if>
             and status > 0 and is_deleted = 0
             <if test="param.filterSql != null">
-                and `user_id` in (#{param.filterSql})
+                and `user_id` in (${param.filterSql})
             </if>
             <if test="param.tenantId != null">
                 and `tenant_id` = #{param.tenantId}
