报告详情统计时排除非采样器节点

--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportBusinessActivityDetailMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportBusinessActivityDetailMapper.xml
@@ -209,6 +209,8 @@
                sum(pass_flag) as `passSum`
         from t_report_business_activity_detail
         where report_id = #{reportId,jdbcType=BIGINT}
+          and business_activity_id > -1
+
     </select>
 
     <update id="updateByPrimaryKeySelective"
