新增接口:获取压测中的报告主键列表

--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
@@ -59,6 +59,13 @@
         order by id desc
         limit 10
     </select>
+    <select id="selectListPressuringReport" resultMap="BaseResultMap">
+        select id
+        from t_report
+        where status=0 and is_deleted=0 and type=0
+        order by id desc
+        limit 100
+    </select>
     <insert id="insertSelective" parameterType="com.pamirs.takin.entity.domain.entity.report.Report" keyProperty="id"
             useGeneratedKeys="true">
         <!--@mbg.generated-->
