fix : 增加告警列表按时间倒序 修改报告按照执行人查询

--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
@@ -265,7 +265,7 @@
                 and start_time  <![CDATA[ <= ]]> #{param.endTime}
             </if>
             <if test="param.userIds != null and param.userIds.size() != 0">
-                 and user_id in
+                 and operate_id in
                   <foreach collection="param.userIds" open="(" close=")" separator="," item="userId">
                     #{userId}
                 </foreach>
