去除冗余类
io.shulie.takin.cloud.data.dto.PageDTO
com.pamirs.takin.entity.domain.dto.report.ApplicationDTO
com.pamirs.takin.entity.domain.dto.report.MachineDetailDTO
com.pamirs.takin.entity.domain.dto.report.BottleneckInterfaceDTO
com.pamirs.takin.entity.domain.dto.report.RiskApplicationCountDTO
io.shulie.takin.cloud.data.converter.senemange.SceneManageEntityConverter

去除冗余模型类

com.pamirs.takin.entity.domain.dto.report.Metrices
com.pamirs.takin.entity.domain.entity.report.Report
com.pamirs.takin.entity.domain.dto.report.QueryData
com.pamirs.takin.entity.domain.dto.report.SummaryDTO
io.shulie.takin.cloud.data.result.report.ReportResult
com.pamirs.takin.entity.domain.dto.report.ReportCountDTO
com.pamirs.takin.entity.domain.dto.report.ReportTrendDTO
com.pamirs.takin.entity.domain.dto.report.SceneActionDTO
io.shulie.takin.cloud.data.param.report.ReportInsertParam
com.pamirs.takin.entity.domain.dto.report.RiskMacheineDTO
io.shulie.takin.cloud.data.result.scenemanage.SlaDetailResult
com.pamirs.takin.entity.domain.dto.report.StatInspectReportDTO
io.shulie.takin.cloud.data.result.scenemanage.WarnDetailResult
io.shulie.takin.cloud.biz.output.scene.manage.SceneDetailOutput
io.shulie.takin.cloud.data.result.scenemanage.SceneDetailResult
io.shulie.takin.cloud.data.result.scenemanage.SceneManageResult
io.shulie.takin.cloud.data.result.scenemanage.ScriptCheckResult
io.shulie.takin.cloud.data.result.scenemanage.ScriptDetailResult
io.shulie.takin.cloud.data.result.middleware.MiddlewareJarResult
io.shulie.takin.cloud.data.param.scenemanage.SceneManageQueryParam
io.shulie.takin.cloud.data.param.statistics.PressureTotalQueryParam
io.shulie.takin.cloud.data.param.middleware.CreateMiddleWareJarParam
io.shulie.takin.cloud.data.result.scenemanage.BusinessActivityDetailResult
io.shulie.takin.cloud.data.result.scenemanage.SceneManageListFromUpdateScriptResult

--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportMapper.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
 <!--suppress ALL -->
 <mapper namespace="com.pamirs.takin.entity.dao.report.TReportMapper">
-    <resultMap id="BaseResultMap" type="com.pamirs.takin.entity.domain.entity.report.Report">
+    <resultMap id="BaseResultMap" type="io.shulie.takin.cloud.data.model.mysql.ReportEntity">
         <!--@mbg.generated-->
         <id column="id" jdbcType="BIGINT" property="id"/>
         <result column="scene_id" jdbcType="BIGINT" property="sceneId"/>
@@ -140,7 +140,7 @@
         group by scene_id
     </select>
 
-    <select id="getReportBySceneId" resultType="com.pamirs.takin.entity.domain.entity.report.Report">
+    <select id="getReportBySceneId" resultType="io.shulie.takin.cloud.data.model.mysql.ReportEntity">
         select id,
                scene_id,
                scene_name,
@@ -158,7 +158,7 @@
         limit 1
     </select>
 
-    <select id="getTempReportBySceneId" resultType="com.pamirs.takin.entity.domain.entity.report.Report">
+    <select id="getTempReportBySceneId" resultType="io.shulie.takin.cloud.data.model.mysql.ReportEntity">
         select id,
                scene_id,
                scene_name,
@@ -178,7 +178,7 @@
         limit 1
     </select>
 
-    <update id="updateByPrimaryKeySelective" parameterType="com.pamirs.takin.entity.domain.entity.report.Report">
+    <update id="updateByPrimaryKeySelective" parameterType="io.shulie.takin.cloud.data.model.mysql.ReportEntity">
         <!--@mbg.generated-->
         update t_report
         <set>
