代码精简化
冗余模型类
io.shulie.takin.cloud.common.bean.file.FileManageInfo
io.shulie.takin.cloud.common.bean.scenemanage.WarnBean
io.shulie.takin.cloud.biz.cloudserver.StatisticsConverter
io.shulie.takin.cloud.biz.output.report.ReportDetailOutput
io.shulie.takin.cloud.entrypoint.convert.StatisticsConvert
io.shulie.takin.cloud.biz.output.scenetask.SceneActionOutput
io.shulie.takin.cloud.biz.input.scenemanage.SceneSlaRefInput
io.shulie.takin.cloud.biz.output.statistics.ReportTotalOutput
com.pamirs.takin.entity.domain.entity.scene.manage.SceneManage
io.shulie.takin.cloud.data.result.statistics.ReportTotalResult
io.shulie.takin.cloud.data.result.scenemanage.SceneSlaRefResult
io.shulie.takin.cloud.biz.input.engine.EnginePluginWrapperInput
io.shulie.takin.cloud.entrypoint.convert.SceneSlaRefRespConvertor
io.shulie.takin.cloud.biz.output.statistics.PressurePieTotalOutput
io.shulie.takin.cloud.biz.output.statistics.PressureListTotalOutput
com.pamirs.takin.entity.domain.entity.report.ReportBusinessActivityDetail
io.shulie.takin.cloud.biz.output.scene.manage.SceneManageWrapperOutput.SceneSlaRefOutput
io.shulie.takin.cloud.sdk.model.response.scenemanage.SceneManageWrapperResp.SceneSlaRefResp

包迁移
io.shulie.takin.cloud.common.pojo.vo.middleware->io.shulie.takin.cloud.biz.output.middleware

--- a/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportBusinessActivityDetailMapper.xml
+++ b/takin-cloud-data/src/main/resources/com/pamirs/takin/entity/mapper/report/TReportBusinessActivityDetailMapper.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
 <mapper namespace="com.pamirs.takin.entity.dao.report.TReportBusinessActivityDetailMapper">
-    <resultMap id="BaseResultMap" type="com.pamirs.takin.entity.domain.entity.report.ReportBusinessActivityDetail">
+    <resultMap id="BaseResultMap" type="io.shulie.takin.cloud.data.model.mysql.ReportBusinessActivityDetailEntity">
         <!--@mbg.generated-->
         <id column="id" jdbcType="BIGINT" property="id"/>
         <result column="report_id" jdbcType="BIGINT" property="reportId"/>
@@ -44,7 +44,7 @@
         where id = #{id,jdbcType=BIGINT}
     </select>
     <insert id="insertSelective"
-            parameterType="com.pamirs.takin.entity.domain.entity.report.ReportBusinessActivityDetail">
+            parameterType="io.shulie.takin.cloud.data.model.mysql.ReportBusinessActivityDetailEntity">
         <!--@mbg.generated-->
         insert into t_report_business_activity_detail
         <trim prefix="(" suffix=")" suffixOverrides=",">
@@ -214,7 +214,7 @@
     </select>
 
     <update id="updateByPrimaryKeySelective"
-            parameterType="com.pamirs.takin.entity.domain.entity.report.ReportBusinessActivityDetail">
+            parameterType="io.shulie.takin.cloud.data.model.mysql.ReportBusinessActivityDetailEntity">
         <!--@mbg.generated-->
         update t_report_business_activity_detail
         <set>
